--- a/client/src/pages/Canvas/index.css
+++ b/client/src/pages/Canvas/index.css
@@ -1,5 +1,6 @@
-.canvas-container {
-    height: 500px;
-    width: 500px;
-    border: 2px solid #000;
+.canvas {
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
