--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,6 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Roboto+Mono&display=swap');
 
-/*global*/
+/****************************
+global style
+*****************************/
+
+:root{
+    --text: #2C2C2C;
+    --stroke-light: #E3E3E3;
+    --stroke-default: #A4A4A4;
+    --stroke-dark: #707070;
+    --stroke-brown: #CDC1B3;
+    --background-white: #FFFFFF;
+    --background-grey: #F5F5F5;
+    --accent: #FEEAEA;
+    --accent-hover: #fee4e4;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -36,18 +51,17 @@ a:active {
     border-radius: 8px;
 }
 
-/* HOME */
-
-:root{
-    --text: #2C2C2C;
-    --stroke-light: #E3E3E3;
-    --stroke-default: #A4A4A4;
-    --stroke-dark: #707070;
-    --stroke-brown: #CDC1B3;
-    --background-white: #FFFFFF;
-    --background-grey: #F5F5F5;
-    --accent: #FEEAEA;
+button {
+    font-family: 'Roboto Mono', monospace;
 }
+
+button:hover{
+    background-color: var(--accent-hover);
+}
+
+/****************************
+home
+*****************************/
 
 .home{
     display: flex;
@@ -123,16 +137,9 @@ a:active {
     font-family: 'Roboto Mono', monospace;
 }
 
-/* CANVAS */
-.canvas {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: aliceblue;
-}
-
-/* HOST PLAYER SETTINGS */
+/****************************
+host, player settings
+*****************************/
 
 .vl {
     border-left: 1px solid rgb(222, 222, 222);
@@ -204,7 +211,13 @@ a:active {
     border: none;
 }
 
-/* canvas */
+.copy-button:hover{
+    cursor: pointer;
+}
+
+/****************************
+loading
+*****************************/
 
 .loading{
     display: flex;
@@ -217,6 +230,10 @@ a:active {
     text-align: center;
 }
 
+/****************************
+canvas
+*****************************/
+
 .canvas{
     background-color: var(--background-grey);
     background-image: radial-gradient(var(--stroke-light) 4%, transparent 12%);
@@ -225,9 +242,8 @@ a:active {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
-
-
 
 ul {
     list-style: none;
@@ -257,12 +273,21 @@ ul li:hover {
     transform: scale(1.1);
 }
 
+.tools li{
+    cursor: pointer;
+
+}
 .tools li:hover {
     transform: scale(1.1);
 }
 .tools img {
     width: 32px;
     height: 32px;
+}
+
+.stroke{
+    display: flex;
+    align-items: center;
 }
 
 #stroke--small {
@@ -311,4 +336,57 @@ ul li:hover {
 
 .toolbox{
     background-color: var(--background-white);
+    display: flex;
+    flex-direction: row;
+}
+
+.toolbox{
+    left: 0px;
+    top: 0px;
+    margin: 0;
+    padding: 0;
+}
+
+.tools{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    padding: 10px 10px 10px 20px;
+}
+
+.stroke{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 16px 20px;
+    justify-content: center;
+}
+
+.palette{
+    display: flex;
+    align-items: center;
+    margin: 0;
+    padding: 16px 20px;
+    justify-content: center;
+}
+
+hr.vertical {
+    height:100%; 
+    width:0;
+    border:1px solid var(--stroke-light);
+    margin: 0;
+}
+
+.canvas--board{
+    margin-top: 20px;
+    margin-bottom: 60px;
+}
+
+.canvas--download{
+    background-color: var(--accent);
+    position: absolute;
+    padding: 16px;
+    right: 64px;
+    top: 16px;
 }
