--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&family=Roboto+Mono&display=swap');
 
-/****************************
-global style
-*****************************/
+/* || global style */
+*{
+    margin: 0;
+    padding: 0;
+}
 
 :root{
     --text: #2C2C2C;
@@ -14,11 +16,6 @@ global style
     --background-grey: #F5F5F5;
     --accent: #FEEAEA;
     --accent-hover: #fee4e4;
-}
-
-body{
-  margin: 0;
-  padding: 0;
 }
 
 p{
@@ -45,12 +42,6 @@ a:active {
   color: black;
 }
 
-.small-shadow{
-    border: 1px solid #E3E3E3;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.04), 0px 8px 16px rgba(0, 0, 0, 0.08);
-    border-radius: 8px;
-}
-
 button {
     font-family: 'Roboto Mono', monospace;
 }
@@ -59,9 +50,30 @@ button:hover{
     background-color: var(--accent-hover);
 }
 
-/****************************
-home
-*****************************/
+.large-button{
+    width: 100%;
+    background-color: var(--accent);
+    border: 0;
+    border-radius: 4px;
+    font-size: 14px;
+    padding: 12px;
+    margin-bottom: 20px;
+    font-family: 'Roboto Mono', monospace;
+}
+
+.logo{
+    font-family: 'Patrick Hand';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 30px;
+    letter-spacing: 0.2em;
+    
+    position: absolute;
+    left: 64px;
+    top: 24px;
+}
+/* || home */
 
 .home{
     display: flex;
@@ -69,24 +81,32 @@ home
     justify-content: center;
     align-items: center;
     height: 100%;
-    background: url("../assets/background.png") no-repeat center center;
-    background-size: cover;
+    width: 100%;
+    background-image:  linear-gradient(#E3E1DD 1px, transparent 1px), linear-gradient(to right, #E3E1DD 1px, #FCFAF6 1px);
+    background-size: 32px 32px;
 }
 
-.form{
+.home--logo{
     max-width: 320px;
+}
+
+.home--background{
+    height: 100%;
+    width: 100%;
+    background: url("../assets/background.png") no-repeat center center;
+    background-size: cover;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: center;
+}
+
+.home--form{
+    flex-direction: column;
     text-align: center;
     background: #FFFFFF;
     border: 1px solid #CDC1B3;
     border-radius: 16px;
     padding: 60px 48px;
-}
-
-.form form {
-    width: 100%
 }
 
 .line-block {
@@ -102,16 +122,6 @@ home
     padding:0 10px; 
 }
 
-.large-button{
-    width: 100%;
-    background-color: var(--accent);
-    border: 0;
-    border-radius: 4px;
-    font-size: 14px;
-    padding: 12px;
-    margin-bottom: 20px;
-    font-family: 'Roboto Mono', monospace;
-}
 
 .key-form{
     display: flex;
@@ -137,9 +147,8 @@ home
     font-family: 'Roboto Mono', monospace;
 }
 
-/****************************
-host, player settings
-*****************************/
+/* || host, player setting */
+
 
 .vl {
     border-left: 1px solid rgb(222, 222, 222);
@@ -165,18 +174,7 @@ host, player settings
     }
   }
 
-.home-logo{
-    font-family: 'Patrick Hand';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 22px;
-    line-height: 30px;
-    letter-spacing: 0.2em;
-    
-    position: absolute;
-    left: 64px;
-    top: 24px;
-}
+
 
 .back-button{
     position: absolute;
@@ -227,9 +225,8 @@ host, player settings
     cursor: pointer;
 }
 
-/****************************
-loading
-*****************************/
+/* || loading */
+
 
 .loading{
     display: flex;
@@ -242,9 +239,29 @@ loading
     text-align: center;
 }
 
-/****************************
-canvas
-*****************************/
+/* || canvas */
+
+
+.canvas--section{
+    display: flex;
+    flex-direction: row;
+    background-color: var(--background-white);
+    justify-content: center;
+    align-items: center;
+    gap: 8px;
+    padding: 8px;
+    border: 1px solid #E3E3E3;
+
+
+}
+.canvas--icon-wrapper{
+    padding: 8px;
+}
+
+.canvas--icon{
+    width: 20px;
+    height: 20px;
+}
 
 .canvas{
     background-color: var(--background-grey);
@@ -276,7 +293,7 @@ ul li:hover {
     transform: scale(1.1);
 }
 
-/*tool*/
+/* || tools*/
 
 .tools{
     display: flex;
@@ -298,7 +315,8 @@ ul li:hover {
     height: 32px;
 }
 
-/*stroke*/
+/* || strokes */
+
 
 .stroke{
     display: flex;
@@ -324,7 +342,8 @@ ul li:hover {
     background-color: var(--stroke-dark);
 }
 
-/*palette*/
+/* || palette */
+
 
 .palette{
     display: flex;
@@ -457,30 +476,3 @@ hr.vertical {
     }
   }
 
-
-/****************************
-404
-*****************************/
-
-.not-found{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 20px;
-}
-
-.not-found img {
-    max-width: 500px;
-    max-height: 500px;
-}
-
-.not-found h1 {
-    font-family: 'Patrick Hand', cursive;
-}
-
-.home-link{
-    margin-top: 20px;
-    font-family: 'Roboto Mono', monospace;
-    text-decoration: underline !important;
-}
