--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -495,6 +495,11 @@ hr.vertical {
     height: 36px;
 }
 
+.large-avatar{
+    width: 80px;
+    height: 80px;
+}
+
 #cover{
     display: none;
     position: relative;
