began implementing canvas swap, top bottom games

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -501,7 +501,7 @@ hr.vertical {
 }
 
 #cover{
-    display: none;
+    display: block;
     position: relative;
     border: #000 1px solid;
     top: -250px;
