--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -10,10 +10,6 @@
     background-size: 32px 32px;
 }
 
-.home--logo{
-    max-width: 320px;
-}
-
 .home--background{
     height: 100%;
     width: 100%;
@@ -24,16 +20,21 @@
     justify-content: center;
 }
 
+.home--logo{
+    max-width: 320px;
+    margin-bottom: 16px;
+}
+
 .home--form{
     flex-direction: column;
     text-align: center;
     background: #FFFFFF;
     border: 1px solid #CDC1B3;
     border-radius: 16px;
-    padding: 60px 48px;
+    padding: 48px 48px;
 }
 
-.line-block {
+.home--line-block {
     width: 100%; 
     text-align: center; 
     border-bottom: 1px solid #000; 
@@ -41,19 +42,14 @@
     margin: 4px 0 4px; 
 } 
  
-.line-block span{ 
+.home--line-block span{ 
     background:#fff; 
     padding:0 10px; 
 }
 
-
-.key-form{
+.home--key-form{
     display: flex;
     flex-direction: column;
-}
-
-.key-form p{
-    font-size: 12px;
 }
 
 .enter-key{
@@ -65,8 +61,12 @@
     color: var(--error)
 }
 
-.key-input{
+.home--key-input{
     font-size: 14px;
     padding: 12px;
     font-family: 'Roboto Mono', monospace;
+}
+
+.home p {
+    margin-bottom: 12px;
 }
