--- a/client/src/pages/Canvas/game.css
+++ b/client/src/pages/Canvas/game.css
@@ -1,17 +1,33 @@
-@import "../../style.css";
-
 .canvas--section-1{
     display: flex;
     flex-direction: row;
     background-color: var(--background-white);
     justify-content: center;
     align-items: center;
-    gap: 8px;
-    padding: 8px;
+    padding: 8px 16px;
     border: 1px solid #E3E3E3;
     position: absolute;
     top: 16px;
     left: 16px;
+    border-radius: 8px;
+}
+
+.vl{
+    margin-right: 16px;
+    padding-right: 16px;
+    border-right: 1px solid var(--stroke-light);
+}
+
+.canvas--avatars{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
+}
+
+.canvas--buttons{
+    display: flex;
+    flex-direction: row;
+    gap: 8px;
 }
 
 .canvas--section-2{
@@ -20,12 +36,12 @@
     background-color: var(--background-white);
     justify-content: center;
     align-items: center;
-    gap: 8px;
-    padding: 8px;
+    padding: 8px 16px;
     border: 1px solid #E3E3E3;
     position: absolute;
     top: 16px;
     right: 16px;
+    border-radius: 8px;
 }
 
 .canvas--section-3{
@@ -35,11 +51,12 @@
     justify-content: center;
     align-items: center;
     gap: 8px;
-    padding: 8px;
+    padding: 14px;
     border: 1px solid #E3E3E3;
     position: absolute;
     bottom: 16px;
     left: 16px;
+    border-radius: 8px;
 }
 
 .canvas--section-4{
@@ -54,16 +71,23 @@
     position: absolute;
     bottom: 16px;
     right: 16px;
+    border-radius: 8px;
 }
 
-
+.drawing--canvas{
+    border-radius: 8px;
+}
 .canvas--canvas{
     position: absolute;
+    border-radius: 8px;
+    border: 1px solid #E3E3E3;
 }
 
 .canvas--palette{
     position: absolute;
     bottom: 16px;
+    border: 1px solid #E3E3E3;
+    border-radius: 8px;
 }
 
 .canvas--icon-wrapper{
@@ -91,7 +115,14 @@ ul {
     padding: 24px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    grid-gap: 20px;
+    grid-gap: 8px;
+}
+
+.stroke{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: left;
 }
 
 .stroke li {
@@ -166,8 +197,8 @@ ul li:hover {
 }
 
 .palette li {
-    width: 32px;
-    height: 32px;  
+    width: 28px;
+    height: 28px;  
     border: 1px var(--stroke-dark) solid;  
     border-radius: 50%;
     cursor: pointer;
@@ -276,15 +307,6 @@ hr.vertical {
     .tools{
         flex-wrap: wrap;
         padding: 0;
-    }
-  }
-
-  @media (max-width: 600px) {
-    .canvas--download{
-        display: none;
-    }
-    .home-logo{
-        display: none;
     }
   }
 
