--- a/client/src/style.css
+++ b/client/src/style.css
@@ -11,11 +11,6 @@
   margin: 0 !important;
 }
 
-.vl {
-  border-left: 1px solid rgb(222, 222, 222);
-  height: 80%;
-}
-
 :root{
     --text: #2C2C2C;
     --stroke-light: #E3E3E3;
@@ -28,7 +23,11 @@
     --accent-hover: #fee4e4;
 }
 
-p{
+h1, p{
+  font-family: 'Patrick Hand', cursive;
+}
+
+label{
   font-family: 'Patrick Hand', cursive;
 }
 
