--- a/client/src/pages/Canvas/canvas.css
+++ b/client/src/pages/Canvas/canvas.css
@@ -1,6 +1,17 @@
 /* || canvas */
 
-.vl{
+.canvas{
+    background-color: var(--background-grey);
+    background-image: radial-gradient(var(--stroke-light) 4%, transparent 12%);
+    background-position: 0 0, 50px 50px;
+    background-size: 28px 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.canvas--vl{
     margin-right: 16px;
     padding-right: 16px;
     border-right: 1px solid var(--stroke-light);
@@ -27,8 +38,8 @@
     padding: 8px 16px;
     border: 1px solid #E3E3E3;
     position: absolute;
-    top: 16px;
-    left: 16px;
+    top: 8px;
+    left: 8px;
     border-radius: 8px;
 }
 
@@ -41,8 +52,8 @@
     padding: 8px 16px;
     border: 1px solid #E3E3E3;
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 8px;
+    right: 8px;
     border-radius: 8px;
 }
 
@@ -56,8 +67,8 @@
     padding: 14px;
     border: 1px solid #E3E3E3;
     position: absolute;
-    bottom: 16px;
-    left: 16px;
+    bottom: 8px;
+    left: 8px;
     border-radius: 8px;
 }
 
@@ -71,10 +82,11 @@
     padding: 8px;
     border: 1px solid #E3E3E3;
     position: absolute;
-    bottom: 16px;
-    right: 16px;
+    bottom: 8px;
+    right: 8px;
     border-radius: 8px;
 }
+
 
 .drawing--canvas{
     border-radius: 8px;
@@ -107,6 +119,10 @@
     z-index: 1;
 }
 
+.canvas--icon-wrapper{
+    padding: 8px;
+}
+
 .top{
     left: 0px;
     top: 0px;
@@ -130,7 +146,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .countdown--value{
@@ -145,7 +161,7 @@
     position: relative;
     background-color: var(--background-white);
     padding: 36px 32px 42px 32px;
-    z-index: 2;
+    z-index: 3;
     min-width: 320px;
 }
 
@@ -163,7 +179,7 @@
     position: relative;
     background-color: var(--background-white);
     padding: 36px 32px 42px 32px;
-    z-index: 2;
+    z-index: 3;
     min-width: 320px;
     opacity: 100%;
 }
@@ -172,7 +188,7 @@
     position: relative;
     background-color: var(--background-white);
     padding: 36px 32px 42px 32px;
-    z-index: 2;
+    z-index: 3;
     min-width: 320px;
     opacity: 100%;
 }
