--- a/client/src/components/button.css
+++ b/client/src/components/button.css
@@ -4,12 +4,12 @@ button {
 }
 
 button:hover{
-    background-color: var(--accent-hover);
+    background-color: var(--clr-accent-dark);
 }
 
 .button--primary{
     padding: 10px 20px;
-    background: #FEEAEA;
+    background: var(--clr-accent);
     border-radius: 4px;
     border: none;
 }
@@ -21,14 +21,14 @@ button:hover{
 .button--round{
     padding: 10px 20px;
     gap: 10px;
-    background: #FEEAEA;
+    background: var(--clr-accent);
     border-radius: 100px;
     border: none;
 }
 
 .button--large{
     width: 100%;
-    background-color: var(--accent);
+    background-color: var(--clr-accent);
     border: 0;
     border-radius: 4px;
     font-size: 14px;
@@ -55,11 +55,11 @@ button:hover{
     align-items: center;
     padding: 8px;
     gap: 8px;
-    background: #F5F5F5;
+    background: var(--clr-grey-lightest);
     border: none;
     border-radius: 8px;
 }
 
 .pink{
-    background-color: var(--accent);
+    background-color: var(--clr-accent);
 }
