--- a/client/src/pages/Canvas/canvas.css
+++ b/client/src/pages/Canvas/canvas.css
@@ -1,8 +1,8 @@
 /* || canvas */
 
 .canvas{
-    background-color: var(--background-grey);
-    background-image: radial-gradient(var(--stroke-light) 4%, transparent 12%);
+    background-color: var(--clr-grey-lightest);
+    background-image: radial-gradient(var(--clr-grey-light) 4%, transparent 12%);
     background-position: 0 0, 50px 50px;
     background-size: 28px 28px;
     display: flex;
@@ -14,7 +14,7 @@
 .canvas--vl{
     margin-right: 16px;
     padding-right: 16px;
-    border-right: 1px solid var(--stroke-light);
+    border-right: 1px solid var(--clr-grey-light);
 }
 
 .canvas--avatars{
@@ -32,11 +32,11 @@
 .canvas--section-1{
     display: flex;
     flex-direction: row;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     justify-content: center;
     align-items: center;
     padding: 8px 16px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
     position: absolute;
     top: 8px;
     left: 8px;
@@ -46,11 +46,11 @@
 .canvas--section-2{
     display: flex;
     flex-direction: row;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     justify-content: center;
     align-items: center;
     padding: 8px 16px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
     position: absolute;
     top: 8px;
     right: 8px;
@@ -60,12 +60,12 @@
 .canvas--section-3{
     display: flex;
     flex-direction: row;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     justify-content: center;
     align-items: center;
     gap: 8px;
     padding: 14px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
     position: absolute;
     bottom: 8px;
     left: 8px;
@@ -75,12 +75,12 @@
 .canvas--section-4{
     display: flex;
     flex-direction: row;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     justify-content: center;
     align-items: center;
     gap: 8px;
     padding: 8px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
     position: absolute;
     bottom: 8px;
     right: 8px;
@@ -98,7 +98,7 @@
     width: 500px;
     height: 500px;
     border-radius: 8px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
 }
 
 .canvas--swap-avatars{
@@ -110,7 +110,7 @@
 
 .canvas--cover{
     position: absolute;
-    background-color: var(--accent);
+    background-color: var(--clr-accent);
     width: 100%;
     height: 50%;
     display: flex;
@@ -127,11 +127,11 @@
 .top{
     left: 0px;
     top: 0px;
-    border-bottom: #707070 dashed;
+    border-bottom: var(--clr-grey-dark) dashed;
 }
 
 .bottom{
     left: 0px;
     top: 250px;
-    border-top: #707070 dashed;
+    border-top: var(--clr-grey-dark) dashed;
 }
