--- a/client/src/pages/Canvas/modal.css
+++ b/client/src/pages/Canvas/modal.css
@@ -22,7 +22,7 @@
 
 .tutorial{
     position: relative;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     padding: 36px 32px 42px 32px;
     z-index: 3;
     min-width: 320px;
@@ -40,7 +40,7 @@
 
 .exit{
     position: relative;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     padding: 36px 32px 42px 32px;
     z-index: 3;
     min-width: 320px;
@@ -49,7 +49,7 @@
 
 .final-drawing{
     position: relative;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     padding: 36px 32px 42px 32px;
     z-index: 3;
     min-width: 320px;
@@ -69,7 +69,7 @@
 .final-drawing--image{
     width: 400px;
     height: 400px;
-    border: 1px solid var(--stroke-light)
+    border: 1px solid var(--clr-grey-light)
 }
 .final-drawing--buttons{
     display: flex;
