--- a/client/src/pages/Canvas/palette.css
+++ b/client/src/pages/Canvas/palette.css
@@ -1,21 +1,21 @@
 .canvas--palette{
     position: absolute;
     bottom: 8px;
-    border: 1px solid #E3E3E3;
+    border: 1px solid var(--clr-grey-light);
     border-radius: 8px;
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     padding: 2px 16px;
 }
 
 .palette{
-    background-color: var(--background-white);
+    background-color: var(--clr-white);
     display: flex;
     flex-direction: row;
     gap: 20px;
 }
 
 .palette--vl{
-    border-right: 1px solid var(--stroke-light);
+    border-right: 1px solid var(--clr-grey-light);
 }
 
 ul {
@@ -65,10 +65,10 @@ input[type="range"]{
     display: block;
     width: 80%;
     height: 2px;
-    background-color: var(--stroke-light);
+    background-color: var(--clr-grey-light);
     border-radius: 8px;
     outline: none;
-    background: linear-gradient(to right, var(--stroke-dark) 5%, #d5d5d5 5%)
+    background: linear-gradient(to right, var(--clr-grey-dark) 5%, var(--clr-grey-light) 5%)
 }
 input[type="range"]::-webkit-slider-runnable-track{
     -webkit-appearance: none;
@@ -86,7 +86,7 @@ input[type="range"]::-webkit-slider-thumb{
     -webkit-appearance: none;
     height: 12px;
     width: 12px;
-    background-color: var(--stroke-dark);
+    background-color: var(--clr-grey-dark);
     border-radius: 50%;
     cursor: pointer;
     margin-top: -2px;
@@ -96,7 +96,7 @@ input[type="range"]::-moz-range-thumb{
     -webkit-appearance: none;
     height: 12px;
     width: 12px;
-    background-color: var(--stroke-dark);
+    background-color: var(--clr-grey-dark);
     border-radius: 50%;
     cursor: pointer;
     margin-top: -2px;
@@ -106,15 +106,15 @@ input[type="range"]::-ms-thumb{
     -webkit-appearance: none;
     height: 12px;
     width: 12px;
-    background-color: var(--stroke-dark);
+    background-color: var(--clr-grey-dark);
     border-radius: 50%;
     cursor: pointer;
     margin-top: -2px;
     border: none;
 }
 input[type="range"]:active::-webkit-slider-thumb{
-    background-color: #ffffff;
-    border: 3px solid var(--stroke-dark);
+    background-color: var(--clr-white);
+    border: 3px solid var(--clr-grey-dark);
 }
 
 /* || colors */
@@ -128,7 +128,7 @@ input[type="range"]:active::-webkit-slider-thumb{
 .palette--colors li {
     width: 28px;
     height: 28px;  
-    border: 1px var(--stroke-dark) solid;  
+    border: 1px var(--clr-grey-dark) solid;  
     border-radius: 50%;
     cursor: pointer;
     transition: transform 0.3s;
@@ -159,6 +159,6 @@ input[type="range"]:active::-webkit-slider-thumb{
     background-color: #4F4F4F;
 }
 #palette--white {
-    background-color: #F6F5F5;
+    background-color: var(--clr-white);
 }
 
