--- a/client/src/components/button.css
+++ b/client/src/components/button.css
@@ -1,6 +1,6 @@
 
 button {
-    font-family: 'Roboto Mono', monospace;
+    font-family: var(--ff-body);
 }
 
 button:hover{
@@ -31,9 +31,9 @@ button:hover{
     background-color: var(--clr-accent);
     border: 0;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: var(--fs-body-regular);
     padding: 12px;
-    font-family: 'Roboto Mono', monospace;
+    font-family: "Roboto Mono", monospace;
 }
 
 .left{
