--- a/client/src/pages/Settings/settings.css
+++ b/client/src/pages/Settings/settings.css
@@ -7,9 +7,8 @@
 }
 
 .input{
-    font-family: 'Patrick Hand';
+    font-family: var(--ff-body);
     text-align: center;
-    font-size: 16px;
     max-width: 120px;
     margin-top: 16px;
     border: none;
