--- a/client/src/pages/Canvas/palette.css
+++ b/client/src/pages/Canvas/palette.css
@@ -26,22 +26,26 @@ ul li:hover {
     transform: scale(1.1);
 }
 
+.palette li{
+    cursor: pointer;
+    padding: 8px;
+}
+
+.palette li:hover {
+    transform: scale(1.1);
+}
+
 /* || tools */
+
+.tools--selected{
+    background-color: var(--clr-grey-lightest);
+}
 
 .palette--tools{
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
-}
-
-.palette li{
-    cursor: pointer;
-    margin: 8px;
-}
-
-.palette li:hover {
-    transform: scale(1.1);
 }
 
 .palette--tools img {
@@ -55,7 +59,7 @@ ul li:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 8px;
+    gap: 12px;
 }
 
 input[type="range"]{
@@ -132,6 +136,7 @@ input[type="range"]:active::-webkit-slider-thumb{
     border-radius: 50%;
     cursor: pointer;
     transition: transform 0.3s;
+    margin: 4px;
 }
 
 #palette--pink {
