--- a/client/src/pages/Settings/settings.css
+++ b/client/src/pages/Settings/settings.css
@@ -89,6 +89,10 @@
     border: 0;
 }
 
+button:hover{
+    background-color: var(--clr-accent-dark);
+}
+
 .avatar---avatar{
     width: 80px;
     height: 80px;
