--- a/client/src/pages/Canvas/modal.css
+++ b/client/src/pages/Canvas/modal.css
@@ -20,7 +20,7 @@
 
 /* || tutorial */
 
-li{
+.tutorial li{
     box-sizing: border-box;
 }
 
@@ -44,15 +44,32 @@ li{
     background-color: none;
 }
 
+.tutorial--descrption{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 4px;
+    margin-bottom: 24px;
+}
+
 /* || exit confirmation */
 
 .exit{
     position: relative;
     background-color: var(--clr-white);
-    padding: 36px 32px 42px 32px;
+    padding: 36px 32px;
     z-index: 3;
     min-width: 320px;
     opacity: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.exit--buttons{
+    display: flex;
+    margin-top: 12px;
+    gap: 8px;
 }
 
 .final-drawing{
@@ -62,16 +79,25 @@ li{
     z-index: 3;
     min-width: 320px;
     opacity: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
 }
 
 .final-drawing--creators{
     display: flex;
     flex-direction: column;
+    gap: 8px;
+}
+
+.final-drawing--creators p{
+    text-transform: uppercase;
 }
 
 .final-drawing--avatars{
     display: flex;
     flex-direction: row;
+    gap: 12px;
 }
 
 .final-drawing--image{
@@ -92,9 +118,19 @@ li{
 
 .final-drawing--download{
     padding: 8px;
+    width: 36px;
+    height: 36px;
     background-color: var(--clr-white);
     margin: 0px;
     border: 1px solid var(--clr-grey-default);
     border-radius: 4px;
+}
 
+.final-drawing--download:hover{
+    background-color: var(--clr-grey-lightest);
+}
+
+.final-drawing--download img{
+    width: 16px;
+    height: 16px;
 }
