--- a/client/src/pages/Settings/settings.css
+++ b/client/src/pages/Settings/settings.css
@@ -6,14 +6,19 @@
     align-items: center;
 }
 
-.input{
+.settings--input{
     font-family: var(--ff-body);
     text-align: center;
     width: 128px;
     margin-top: 16px;
     border: none;
     padding-bottom: 8px;
-    border-bottom: 1px solid #9A9A9A;
+    border-bottom: 1px solid var(--clr-grey-default);
+}
+
+.settings--input:focus{
+    outline: none;
+    border-bottom: 2px solid var(--clr-active);
 }
 
 .settings--vl{
@@ -40,7 +45,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 16px;
+    gap: 32px;
 }
 
 .settings--avatar{
@@ -87,6 +92,15 @@
 .avatar--selector{
     background-color: var(--clr-white);
     border: 0;
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+}
+
+.avatar--selector:hover{
+    background-color: transparent;
+    outline-offset: 2px;;
+    outline: 1px solid var(--clr-grey-dark);
 }
 
 button:hover{
@@ -114,7 +128,7 @@ button:hover{
     display: flex;
     flex-direction: row;
     gap: 120px;
-    margin-top: 16px
+    margin: 16px 0;
 }
 
 .selection--option{
@@ -123,9 +137,14 @@ button:hover{
     justify-content: center;
     align-items: center;
     max-width: 300px;
-    gap: 16px
 }
 
 .selection--option p {
     text-align: center;
+    margin-bottom: 12px;
+}
+
+
+.selection--option button {
+    margin-top: 8px;
 }
