--- a/client/src/pages/Canvas/canvas.css
+++ b/client/src/pages/Canvas/canvas.css
@@ -124,6 +124,21 @@
     align-items: center;
     justify-content: center;
     z-index: 1;
+    border-radius: 8px;
+}
+
+.canvas--swap{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1;
+    color: var(--clr-white);
+    border-radius: 8px;
 }
 
 .canvas--icon-wrapper{
