updated back icon + blinking countdown

--- a/client/src/pages/Canvas/canvas.css
+++ b/client/src/pages/Canvas/canvas.css
@@ -174,3 +174,14 @@
     color: white;
     opacity: 100%;
 }
+
+.blink {
+    color: var(--clr-error);
+    animation: blinker 1s linear infinite;
+}
+  
+@keyframes blinker {
+    50% {
+        opacity: 0;
+    }
+}
